Borrado de archivos no necesarios

--- a/pixelados/.settings/org.jboss.ide.eclipse.as.core.prefs
+++ b/pixelados/.settings/org.jboss.ide.eclipse.as.core.prefs
@@ -1,2 +1,2 @@
 eclipse.preferences.version=1
-org.jboss.ide.eclipse.as.core.singledeployable.deployableList=ear\near\near/target/pruebaEAR.ear\ntarget/pixelados.ear\n
+org.jboss.ide.eclipse.as.core.singledeployable.deployableList=ear\near/target/pruebaEAR.ear\ntarget/pixelados.ear\n
